# Python-Forum-API

./: .gitattributes  .gitignore  LICENSE  README.md  TASKS.md  codecov.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline.py  0002_create_identity_tables.py  0003_seed_identity.py  0004_create_content_tables.py  0005_seed_categories.py  0006_create_files_table.py  0007_grant_category_create.py  0008_reactions_owner_userstats.py  0009_post_icon_owner_type.py
backend/app/: config.py  container.py  database.py  main.py
backend/app/core/: deps.py  permissions.py  security.py
backend/app/maintenance/: __init__.py  cleanup_orphan_files.py
backend/app/models/: __init__.py  attachment.py  category.py  comment.py  post.py  user.py
backend/app/modules/content/application/: __init__.py  commands.py  errors.py  pagination.py  ports.py
backend/app/modules/content/application/use_cases/: __init__.py  add_comment.py  create_category.py  create_post.py  create_tag.py  delete_category.py  delete_comment.py  delete_post.py  get_comment_tree.py  get_post.py  list_categories.py  list_posts.py  list_tags.py  update_comment.py  update_post.py
backend/app/modules/content/domain/: __init__.py  category.py  comment.py  events.py  post.py  tag.py  value_objects.py
backend/app/modules/content/infrastructure/: __init__.py  mappers.py  unit_of_work.py
backend/app/modules/content/infrastructure/orm/: __init__.py  category_orm.py  comment_orm.py  post_orm.py  tag_orm.py
backend/app/modules/content/infrastructure/repositories/: __init__.py  category_repo.py  comment_repo.py  post_repo.py  tag_repo.py
backend/app/modules/content/presentation/: __init__.py
backend/app/modules/content/presentation/dto/: __init__.py  category_dto.py  comment_dto.py  post_dto.py  tag_dto.py
backend/app/modules/content/presentation/routers/: __init__.py  categories.py  comments.py  posts.py  tags.py
backend/app/modules/engagement/: __init__.py  router.py
backend/app/modules/files/application/: __init__.py  commands.py  errors.py  file_processing.py  ports.py
backend/app/modules/files/application/use_cases/: __init__.py  attach_files.py  cleanup_orphans.py  complete_upload.py  delete_file.py  get_file.py  get_owner_image.py  list_my_files.py  list_owner_files.py  request_upload.py  set_avatar.py  set_category_image.py  set_post_icon.py  upload_direct.py
backend/app/modules/files/domain/: __init__.py  events.py  file.py  value_objects.py
backend/app/modules/files/infrastructure/: __init__.py  mappers.py  unit_of_work.py
backend/app/modules/files/infrastructure/orm/: __init__.py  file_orm.py
backend/app/modules/files/infrastructure/repositories/: __init__.py  file_repo.py
backend/app/modules/files/infrastructure/storage/: __init__.py  image_processing.py  minio_storage.py
backend/app/modules/files/presentation/: __init__.py  deps.py
backend/app/modules/files/presentation/dto/: __init__.py  file_dto.py
backend/app/modules/files/presentation/routers/: __init__.py  files.py
backend/app/modules/identity/application/: __init__.py  commands.py  errors.py  ports.py
backend/app/modules/identity/application/use_cases/: __init__.py  assign_role.py  grant_permission.py  login.py  logout.py  refresh_session.py  register_user.py  set_user_status.py
backend/app/modules/identity/domain/: __init__.py  events.py  permission.py  refresh_token.py  role.py  user.py  value_objects.py
backend/app/modules/identity/infrastructure/: __init__.py  mappers.py  unit_of_work.py
backend/app/modules/identity/infrastructure/auth/: __init__.py  argon2_hasher.py  pyjwt_token_service.py
backend/app/modules/identity/infrastructure/orm/: __init__.py  permission_orm.py  refresh_token_orm.py  role_orm.py  user_orm.py
backend/app/modules/identity/infrastructure/repositories/: __init__.py  refresh_token_repo.py  role_repo.py  (+1 more)
backend/app/modules/identity/presentation/: __init__.py  deps.py
backend/app/routers/: admin.py  attachments.py  auth.py  categories.py  comments.py  posts.py  users.py
backend/app/schemas/: attachment.py  category.py  comment.py  post.py  user.py
backend/app/services/: attachment_service.py  comment_service.py  storage_service.py
backend/app/shared/: __init__.py
backend/app/shared/application/: __init__.py  event_bus.py  repository.py  result.py  unit_of_work.py  use_case.py
backend/app/shared/domain/: __init__.py  entity.py  entity_id.py  errors.py  events.py  value_object.py
backend/app/shared/infrastructure/: __init__.py
backend/app/shared/infrastructure/db/: __init__.py  base.py  session.py
backend/app/shared/infrastructure/eventbus/: __init__.py  in_memory.py
backend/app/shared/infrastructure/logging/: __init__.py  setup.py
backend/app/shared/presentation/: __init__.py  api_response.py  deps.py  error_handler.py
backend/app/shared/presentation/middleware/: __init__.py  security_headers.py  upload_size_limit.py
backend/app/static/admin/: style.css
backend/app/templates/admin/: attachments.html  base.html  comments.html  dashboard.html  login.html  posts.html  users.html
backend/scripts/: export_openapi.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_endpoints.py
backend/tests/integration/: conftest.py
backend/tests/integration/content/: test_content_flow.py
backend/tests/integration/engagement/: test_engagement_flow.py
backend/tests/integration/files/: test_image_use_cases.py  test_use_cases.py
backend/tests/integration/identity/: test_auth_flow.py
backend/tests/unit/content/: test_category_tag.py  test_comment_path.py  test_pagination.py  test_post.py  test_use_cases.py  test_value_objects.py
backend/tests/unit/files/: test_file_aggregate.py  test_value_objects.py
backend/tests/unit/identity/: test_application_use_cases.py  test_argon2_hasher.py  test_refresh_token.py  test_token_service.py  test_user.py  test_value_objects.py
backend/tests/unit/shared/: test_api_response.py  test_result.py
(+162 files in other folders)
