[project]
name = "forum-wedkarskie-backend"
version = "0.3.0"
description = "Fishing forum — FastAPI backend (Clean Architecture + modular monolith)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jakub Patkowski" }]

# Runtime dependencies.
# Keep this list curated; add only what is actually imported by the application.
dependencies = [
    # HTTP framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",      # multipart/form-data (file uploads)

    # Persistence
    "sqlalchemy>=2.0.36",
    "psycopg[binary,pool]>=3.2.0",   # psycopg3 — modern, async-ready
    "alembic>=1.14.0",

    # Validation / settings
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Auth — single path: PyJWT (access+refresh, rotation, reuse-detection)
    # + Argon2id password hashing. The legacy jose/passlib path was removed
    # together with the admin SSR panel.
    "pyjwt>=2.10.0",
    "argon2-cffi>=23.1.0",

    # File processing
    "python-magic>=0.4.27",          # MIME sniffing
    # On Windows, libmagic comes from a separate wheel:
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "minio>=7.2.0",                  # S3-compatible object storage client (MinIO)
    "pillow>=11.0.0",               # image thumbnails (resize on upload)

    # Logging
    "structlog>=24.4.0",

    # Observability (used from phase 7, listed now for stability)
    "prometheus-fastapi-instrumentator>=7.0.0",

    # Event bus (used from phase 4)
    "aio-pika>=9.5.0",
]

[dependency-groups]
# Development tooling: linters, type-checker, tests.
# Installed by `uv sync` automatically (uv reads PEP 735 dependency-groups).
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",                 # for AsyncClient in tests
    "testcontainers[postgres,rabbitmq]>=4.8.0",
]

# -----------------------------------------------------------------------------
# uv configuration
# -----------------------------------------------------------------------------
[tool.uv]
package = false                       # backend is an application, not a library
managed = true

# -----------------------------------------------------------------------------
# Ruff — linter + formatter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
# `app/models` holds the transitional ORM tables that the new modules alias
# (one class = one table). It is excluded from lint/type polish on purpose;
# everything else (modules/, shared/) is fully checked.
extend-exclude = [
    "alembic/versions",
    "app/models",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "S",        # bandit (security)
    "RUF",      # ruff-specific
    "ASYNC",    # async best practices
    "SIM",      # simplifications
    "C4",       # comprehensions
]
ignore = [
    "S101",     # use of assert (we use it in tests)
    "B008",     # function-call-in-default — FastAPI Depends() is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S107"]  # asserts & hardcoded test passwords OK in tests
# Domain errors use intent-revealing names (PostNotFound, EmailAlreadyExists, …)
# rather than the generic *Error suffix that N818 wants.
"**/application/errors.py" = ["N818"]
# Dev-default credentials only; real values are injected via env / k8s Secret.
"app/config.py" = ["S105"]
# The RBAC docstring uses the set-union symbol on purpose.
"app/modules/identity/domain/user.py" = ["RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# -----------------------------------------------------------------------------
# Mypy — strict type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
# `warn_unused_configs` would complain about overrides for modules that are
# not yet imported anywhere (magic, aio_pika, argon2 land in phases 3-4).
# We re-enable once those modules are actually used.
warn_unused_configs = false
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]
# Same rationale as ruff: the transitional ORM in app/models is not type-polished.
exclude = [
    "alembic/versions/",
    "app/models/",
]

# Third-party libs without type stubs — silence import errors here.
[[tool.mypy.overrides]]
module = [
    "magic",
    "magic.*",
    "aio_pika",
    "aio_pika.*",
    "argon2",
    "argon2.*",
    "minio",
    "minio.*",
]
ignore_missing_imports = true

# The transitional ORM in app/models still uses 1.x-style Column(...) (no
# Mapped[]). It is the deliberately-untyped legacy layer — do not type-check it.
[[tool.mypy.overrides]]
module = ["app.models.*"]
ignore_errors = true

# The infrastructure adapter layer (repositories, mappers, ORM, storage) reads
# those Column-typed ORM attributes directly. The resulting Column[X]-vs-X
# mismatches and the loose mapper signatures are framework-boundary noise, not
# real bugs, so those codes are relaxed here pending the ORM's migration to
# SQLAlchemy 2.0 Mapped[]. Domain, application and presentation stay fully strict.
[[tool.mypy.overrides]]
module = ["app.modules.*.infrastructure.*"]
disable_error_code = [
    "assignment", "arg-type", "attr-defined", "index", "return-value",
    "no-untyped-def", "var-annotated",
]

# admin_users builds a cheap user projection by reading ORM columns directly.
[[tool.mypy.overrides]]
module = ["app.modules.identity.presentation.routers.admin_users"]
disable_error_code = ["assignment", "arg-type", "attr-defined", "index", "return-value"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p", "no:cacheprovider",
]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure domain tests, no I/O",
    "integration: testcontainers Postgres / RabbitMQ",
    "e2e: full HTTP-level tests against running app",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
